# netsentinel

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: alerts.py  compliance.py  dashboard.py  demo.py  devices.py  router.py  scans.py  websocket.py
backend/app/models/: __init__.py  alert.py  compliance.py  device.py  scan.py  traffic.py
backend/app/schemas/: alert.py  compliance.py  device.py  scan.py  traffic.py
backend/app/services/: alerting.py  anomaly_detector.py  compliance.py  device_discovery.py  geoip.py  port_scanner.py  scanner.py  traffic_analyzer.py
backend/app/tasks/: background.py  scheduler.py
docs/: index.html
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/devices/: page.tsx
frontend/src/app/scans/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/traffic/: page.tsx
frontend/src/components/dashboard/: AlertsFeed.tsx  DeviceChart.tsx  NetworkMap.tsx  StatsCards.tsx  TrafficGraph.tsx
frontend/src/components/devices/: DeviceDetail.tsx  DeviceTable.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts  websocket.ts
frontend/src/types/: index.ts
